form design and alignment fix

--- a/Webadmin/src/main/webapp/assets/css/custom.css
+++ b/Webadmin/src/main/webapp/assets/css/custom.css
@@ -2,7 +2,10 @@ a:focus
 {
  outline: none;
 }
-
+body
+{
+  font-size: 13px;
+}
 .box {
     position: relative;
     overflow: hidden;
@@ -70,9 +73,17 @@ a:focus
 {
     background: #ffba00 !important;
 }
+.margn-top15
+{
+  margin-top:15px !important;
+}
 .margn-top20
 {
   margin-top:20px !important;
+}
+.margn-top30
+{
+  margin-top:30px !important;
 }
 .pdng-top15
 {
@@ -375,6 +386,49 @@ button.btn.btn-outline {
       color: #777;
 }
 
+.form-control, .form-group .form-control
+{
+      border: 1px solid #d6d6d6;
+      background: none !important;
+      padding-left:10px;
+}
+.form-group.is-focused .form-control
+{
+        border: 1px solid #FFAA22;
+        background: none !important;
+}
+
+.form-group.has-error .form-control
+{
+  border: 1px solid red;
+  background: none !important;
+}
+.card
+{
+  background: #F9F9F9;
+  border-radius: 0;
+}
+.card [data-background-color]
+{
+  border-radius: 0;
+}
+.label-on-left
+{
+  padding-top: 20px;
+}
+.checkbox label, .radio label, label, .label-on-left, .label-on-right
+{
+  font-size:13px;
+}
+.table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: #eeeeee;
+}
+
+
+.listOfActions li.list-group-item
+{
+  min-height:45px;
+}
 
 /* left right modal css*/
 
